fix(pokedex): Longer name fields, Pokémon list always visible (mobile) in Pokédex/Hatchery and some fixes (#4044)
* Show Pokemon list always in mobile

* Category/Region dropdowns fix

* Color change on hover
* Text overflowing

* Increased Name field width

* Edit category button moved to Category dropdown
* Hatchery: Category dropdown is a Bootstrap dropdown now
* Reorganized filters so Pokedex and Hatchery have the same filter order

* Fix category still being selected after deleted

* Reset Pokédex/Hatchery filters on update

* Fix: double scroll

* Breakpoints fix

---------

--- a/src/styles/pokedex.less
+++ b/src/styles/pokedex.less
@@ -113,3 +113,18 @@
   border-bottom-left-radius: 6px; 
   border-bottom-right-radius: 6px
 }
+
+/* Pokedex Category dropdown */
+.dropdown button,
+.dropdown .dropdown-item {
+  word-wrap: break-word;
+  white-space: normal !important;
+  overflow: hidden;
+}
+.dropdown-item:hover {
+  background-color: var(--secondary) !important;
+}
+/* For white dropdown buttons, they have white text in dark themes. Shouldn't affect light themes */
+.btn-dropdown:hover {
+  color:#444 !important;
+}
